--- a/card3.css
+++ b/card3.css
@@ -28,13 +28,14 @@
 .leftbox{
     height: 100%;
     width: 50%;
-    padding: 1.5rem 3rem;
+    padding: 1rem 3rem;
     display: flex;
     flex-flow: column;
     align-items: center;
-    gap: 3rem;
+    gap: 2.5rem;
     background-color: #450844;
 color: #fffaff;
+transition: all 0.3s linear 0s;
 }
 
 .card-container{
@@ -42,8 +43,7 @@ color: #fffaff;
     flex-flow: row nowrap;
     gap: 2rem;
   justify-content: center;
-  margin-top: 1.5rem;
-  
+  margin-top: 1rem;
   }
   
   .card-container a{
@@ -64,7 +64,7 @@ color: #fffaff;
 
 .leftbox>p{
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-transform: capitalize;
 }
 
@@ -93,9 +93,13 @@ color: #fffaff;
     
 }
 
+.leftbox:hover a{
+    box-shadow: 0px 0px 5px 0px  rgb(168, 183, 2);
+  }
 
 .card-container a:hover{
     background-color: rgb(27, 149, 183);
     transform: scale(1.1);
     color: white;
 }
+
